# Fairness-Rectification

./: .gitignore  README.md  hello.py  pyproject.toml  test.ipynb
Outputs/: adversarial_debiasing_results.csv  baseline_results.csv  equalized_odds_results.csv  reweighting_results.csv
gradcam_outputs/: consistency_scores_age_baseline_vs_ad.json  consistency_scores_age_baseline_vs_eo.json  consistency_scores_age_baseline_vs_rw.json  consistency_scores_age_eo_vs_ad.json  consistency_scores_age_rw_vs_ad.json  consistency_scores_age_rw_vs_eo.json  consistency_scores_baseline_vs_ad.json  consistency_scores_baseline_vs_eo.json  consistency_scores_baseline_vs_rw.json  consistent_correct_indices.json  consistent_correct_indices_2.json  consistent_correct_indices_eo.json
gradcam_outputs/correct/: ad2_correct_class_0_cam.npy  ad2_correct_class_1_cam.npy  ad2_correct_class_2_cam.npy  ad2_correct_class_3_cam.npy  ad2_correct_class_4_cam.npy  ad2_correct_class_5_cam.npy  (+50 more)
src/: comparison.py  config.py  costum_image.py  dataset.py  evaluation.py  fairness.py  fairness_metrics.py  grad_job.sh  grad_job2.sh  gradcam.py  gradcam_comp.py  main.py  main_ad.py  main_base.py  main_eo.py  main_rw.py  make_plots.py  model.py  plots.py  prints.py  slurm-17592017.out  slurm-17816362.out  slurm-17817981.out  slurm-17850721.out  slurm-17868838.out  slurm-17868938.out  slurm-17868957.out  slurm-17975401.out  slurm-17975459.out  slurm-17975718.out  train.py  train_ad.py  train_eo.py  train_rw.py  tune_baseline.py  tune_fair_ad.py  tune_fair_eo.py  tune_fair_rw.py  utils.py
