[project]
name = "fairness-rectification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deeplake>=4.1.11",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pydrive2>=1.21.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch==2.2.2",
    "torcheval>=0.0.7",
    "torchmetrics>=1.7.1",
    "torchvision>=0.17.2",
    "tqdm>=4.67.1",
]
